--- a/AudioDiffTool.vcxproj
+++ b/AudioDiffTool.vcxproj
@@ -128,6 +128,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="AudioDiffTool.cpp" />
+    <ClCompile Include="wav.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="wav.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
