--- a/AudioDiffTool.vcxproj.filters
+++ b/AudioDiffTool.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="AudioDiffTool.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="wav.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="wav.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
