--- a/TestInputGenerator/TestInputGenerator.vcxproj.filters
+++ b/TestInputGenerator/TestInputGenerator.vcxproj.filters
@@ -15,13 +15,8 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="AudioDiffTool.cpp">
+    <ClCompile Include="TestInputGeneratorSampleMain.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="wav.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
   </ItemGroup>
 </Project>
