--- a/TestInputGenerator/TestInputGenerator.vcxproj.filters
+++ b/TestInputGenerator/TestInputGenerator.vcxproj.filters
@@ -15,8 +15,13 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="TestInputGeneratorSampleMain.cpp">
+    <ClCompile Include="src\TestInputGenerator.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="include\TestInputGenerator.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
