--- a/AudioDiffToolSample/AudioDiffToolSample.vcxproj.filters
+++ b/AudioDiffToolSample/AudioDiffToolSample.vcxproj.filters
@@ -15,13 +15,8 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\AudioDiffTool.cpp">
+    <ClCompile Include="AudioDiffToolSample.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="include\AudioDiffTool.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
   </ItemGroup>
 </Project>
