--- a/AudioDiffToolUnitTest/AudioDiffToolUnitTest.vcxproj.filters
+++ b/AudioDiffToolUnitTest/AudioDiffToolUnitTest.vcxproj.filters
@@ -15,12 +15,15 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\AudioDiffTool.cpp">
+    <ClCompile Include="AudioDiffToolUnitTest.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="pch.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="include\AudioDiffTool.h">
+    <ClInclude Include="pch.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
